# context-compiler-hermes-plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  TODO.md  USAGE.md  formalcc-hermes-plugin-packaging-section.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
examples/: usage_examples.py
plugins/context_engine/formalcc_engine/: README.md  __init__.py  client.py  config.py  engine.py  message_converter.py  plugin.yaml
plugins/memory/formalcc_memory/: README.md  __init__.py  cli.py  client.py  config.py  diagnostics.py  plugin.yaml  provider.py
shared/: __init__.py  auth.py  config_validator.py  error_handler.py  errors.py  models.py  resilience.py  runtime_client.py  utils.py
tests/: conftest.py  test_context_engine.py  test_coverage_improvements.py  test_e2e.py  test_integration.py  test_memory_provider.py  test_phase2_enhancements.py  test_runtime_client.py
