[project]
name = "formalcc-hermes-plugin"
version = "0.3.0"
description = "FormalCC integration for Hermes Agent - Memory and Context Management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FormalAI", email = "contact@formalai.com"}
]
maintainers = [
    {name = "FormalAI", email = "contact@formalai.com"}
]
keywords = ["hermes", "formalcc", "context", "memory", "agent", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/FormSyAI/context-compiler-hermes-plugin"
Documentation = "https://github.com/FormSyAI/context-compiler-hermes-plugin/blob/main/README.md"
Repository = "https://github.com/FormSyAI/context-compiler-hermes-plugin"
Issues = "https://github.com/FormSyAI/context-compiler-hermes-plugin/issues"
Changelog = "https://github.com/FormSyAI/context-compiler-hermes-plugin/blob/main/CHANGELOG.md"

[project.entry-points."hermes.plugins.memory"]
formalcc-memory = "plugins.memory.formalcc_memory:FormalCCMemoryProvider"

[project.entry-points."hermes.plugins.context_engine"]
formalcc-engine = "plugins.context_engine.formalcc_engine:FormalCCContextEngine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugins", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
